--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Reactive JSON Searching</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/main.css"/>
 </head>
 <body>
 
-    <div id="react"></div>
+<div id="react"></div>
 
-    <script src="built/bundle.js"></script>
+<script src="built/bundle.js"></script>
 
 </body>
 </html>
